--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -65,7 +65,7 @@
 }
 .recorded button {
   color: black;
-  width:auto;
+  width: auto;
   height: auto;
   background-color: #d5cea3;
   margin-bottom: 2rem;
@@ -80,4 +80,100 @@
 .recorded button:hover {
   color: #d5cea3;
   background-color: black;
+}
+
+/* هواتف عادية 480px - 767px */
+@media (min-width: 480px) and (max-width: 767px) {
+  .website-title {
+    margin-top: -4rem;
+  }
+  .website-title h1 {
+    font-size: 2.8rem;
+  }
+  .website-title p {
+    font-size: 1.4rem;
+    margin-top: -1.5rem;
+    padding: 1rem;
+  }
+  .reciting {
+    margin-top: -1.5rem;
+  }
+  .reciting h1 {
+    font-size: 2rem;
+  }
+  .reciting button {
+    font-size: 1.5rem;
+  }
+}
+
+/* تابليت 768px - 991px */
+@media (min-width: 768px) and (max-width: 991px) {
+  .website-title {
+    margin-top: -4rem;
+  }
+  .website-title h1 {
+    font-size: 4rem;
+  }
+  .website-title p {
+    font-size: 1.7rem;
+    margin-top: -1.5rem;
+    padding: 1rem;
+  }
+  .reciting {
+    margin-top: -1.5rem;
+  }
+  .reciting h1 {
+    font-size: 2rem;
+  }
+  .reciting button {
+    font-size: 1.5rem;
+  }
+}
+
+/* لابتوب 992px - 1199px */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .website-title {
+    margin-top: -4rem;
+  }
+  .website-title h1 {
+    font-size: 5rem;
+  }
+  .website-title p {
+    font-size: 1.7rem;
+    margin-top: -1.5rem;
+    padding: 1rem;
+  }
+  .reciting {
+    margin-top: -1.5rem;
+  }
+  .reciting h1 {
+    font-size: 2.5rem;
+  }
+  .reciting button {
+    font-size: 1.5rem;
+  }
+}
+
+/* ديسكتوب 1200px وأكبر */
+@media (min-width: 1200px) {
+  .website-title {
+    margin-top: -4rem;
+  }
+  .website-title h1 {
+    font-size: 5rem;
+  }
+  .website-title p {
+    font-size: 1.7rem;
+    margin-top: -1.5rem;
+    padding: 1rem;
+  }
+  .reciting {
+    margin-top: -1.5rem;
+  }
+  .reciting h1 {
+    font-size: 2.5rem;
+  }
+  .reciting button {
+    font-size: 1.5rem;
+  }
 }
