editing audio cintainer

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  text-align: center;
 }
 .footer-content h4 {
   padding-top: 10px;
