--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -52,7 +52,8 @@
   margin-top: 2rem;
 }
 .reciting h1 {
-  padding: 2rem;
+  padding: 1.2rem;
+  padding-top: 3rem;
   color: rgb(255, 255, 255);
   font-size: 3rem;
   font-family: "Scheherazade New", serif;
