--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,16 +1,18 @@
-
 .footer-container {
   width: 100%;
   background-color: #e5e5cb;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 12px;
   text-align: center;
 }
 .footer-content h4 {
   padding-top: 10px;
   text-align: center;
   color: rgb(124, 122, 122);
-  
+  font-size: 15px;
+}
+.footer-container h2 {
+  font-size: 20px;
 }
