--- a/src/Pages/RecitePage/Recite.css
+++ b/src/Pages/RecitePage/Recite.css
@@ -83,3 +83,132 @@ li button {
 li button:hover {
   color: #d5cea3;
 }
+/* شاشات صغيرة جدًا أقل من 480px */
+@media (max-width: 479px) {
+  .page-container {
+    width: 100%;
+  }
+  .recitations h1 {
+    font-size: 30px;
+  }
+  .select-reciter {
+    color: #d5cea3;
+    padding-top: 40px;
+    font-family: "Alexandria";
+  }
+  .select-reciter label {
+    padding-left: 20px;
+    font-size: 25px;
+  }
+  .select-reciter select {
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+    border: 0;
+    border-radius: 25px;
+  }
+}
+
+/* هواتف ذكية 480px - 767px */
+@media (min-width: 480px) and (max-width: 767px) {
+  .page-container {
+    width: 100%;
+  }
+  .recitations h1 {
+    font-size: 35px;
+  }
+  .select-reciter {
+    color: #d5cea3;
+    padding-top: 40px;
+    font-family: "Alexandria";
+  }
+  .select-reciter label {
+    padding-left: 20px;
+    font-size: 25px;
+  }
+  .select-reciter select {
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+    border: 0;
+    border-radius: 25px;
+  }
+}
+
+/* تابليت 768px - 991px */
+@media (min-width: 768px) and (max-width: 991px) {
+  .page-container {
+    width: 100%;
+  }
+  .recitations h1 {
+    font-size: 45px;
+  }
+  .select-reciter {
+    color: #d5cea3;
+    padding-top: 40px;
+    font-family: "Alexandria";
+  }
+  .select-reciter label {
+    padding-left: 20px;
+    font-size: 30px;
+  }
+  .select-reciter select {
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border: 0;
+    border-radius: 25px;
+  }
+}
+
+/* لابتوب 992px - 1199px */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .page-container {
+    width: 100%;
+  }
+  .recitations h1 {
+    font-size: 50px;
+  }
+  .select-reciter {
+    color: #d5cea3;
+    padding-top: 40px;
+    font-family: "Alexandria";
+  }
+  .select-reciter label {
+    padding-left: 20px;
+    font-size: 30px;
+  }
+  .select-reciter select {
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border: 0;
+    border-radius: 25px;
+  }
+}
+
+/* ديسكتوب 1200px وأكبر */
+@media (min-width: 1200px) {
+  .page-container {
+    width: 100%;
+  }
+  .recitations h1 {
+    font-size: px;
+  }
+  .select-reciter {
+    color: #d5cea3;
+    padding-top: 40px;
+    font-family: "Alexandria";
+  }
+  .select-reciter label {
+    padding-left: 20px;
+    font-size: 30px;
+  }
+  .select-reciter select {
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border: 0;
+    border-radius: 25px;
+  }
+}
