--- a/src/Pages/RecitePage/Recite.css
+++ b/src/Pages/RecitePage/Recite.css
@@ -108,6 +108,9 @@ li button:hover {
     border: 0;
     border-radius: 25px;
   }
+  .tilawat-audio ul li {
+    width: 100%;
+  }
 }
 
 /* هواتف ذكية 480px - 767px */
